# bevy_jam_1

./: .gitignore  Cargo.toml  README.md  rust-toolchain
.cargo/: config.toml
.github/workflows/: release.yml
assets/: asset-licenses.csv
src/: enemy.rs  gun.rs  history.rs  inputs.rs  item.rs  main.rs  player.rs  singleplayer.rs  utils.rs
src/levels/: map.rs  mod.rs
src/main_menu/: mod.rs
src/menus/: common.rs  main_menu.rs  mod.rs
src/player/: mod.rs  player_movement.rs
src/resources/: audio_channels.rs  mod.rs
src/singleplayer/: mod.rs  player.rs
tools/ci/src/: main.rs
web/: jam.d.ts  jam.js  jam_bg.wasm.d.ts
