[package]
name = "AwesomeBevyGame"
description = "A game written in Bevy for Bevy Jam 1"
version = "0.0.0"
authors = [""]
license = "MIT OR Apache-2.0"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", ".github/**/*"]
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.6", features = [ "dynamic" ] }

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy" }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"
# We can use a different feature set of Bevy for our library vs our examples and tests
bevy = { version = "0.6" }


[lib]
name = "template_lib"
path = "src/lib.rs"

[[bin]]
name = "template_bin"
path = "src/main.rs"
