[package]
name = "AwesomeBevyGame"
description = "A game written in Bevy for Bevy Jam 1"
version = "0.0.0"
authors = ["SirCarter", "Supermath101", "tas", "Seldom", "mdenchev"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
bevy = { version = "0.6" }
bevy_ecs_tilemap = "0.5"
bevy_egui = "0.11"
bevy_rapier2d = "0.12"