[package]
name = "awesome_bevy_game"
description = "A game written in Bevy for Bevy Jam 1"
version = "0.0.0"
authors = ["SirCarter", "Supermath101", "tas", "Seldom", "mdenchev"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
# bevy without bevy_audio feature
bevy = { version = "0.6", features = [
    "bevy_gilrs",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "filesystem_watcher"
] }
bevy_ecs_tilemap = "0.5"
bevy_egui = "0.11"
anyhow = "1.0"
bevy_kira_audio = { version = "0.8", features = ["wav"] }
heron = { version = "2.0.1", features = ["2d", "enhanced-determinism"] }
bevy-inspector-egui = "0.8"
rand = "0.8"
derive_more = "0.99"